KAS-3708 Revert temporary block lists back to checkbox list component & fix small spacing issue

--- a/app/styles/auk/_auk-additions.scss
+++ b/app/styles/auk/_auk-additions.scss
@@ -322,6 +322,10 @@ table tr.lt-expanded-row {
   > .auk-checkbox-list {
     margin-left: 2.5rem;
   }
+
+  + .auk-checkbox-list {
+    margin-top: .5rem;
+  }
 }
 
 .auk-checkbox-list--inline {
